# Coasis

./: .gitignore  pyproject.toml
Conexiune/: .env  __main__.py  api.py  config.py  enums.py  feed_test.py  sample.py  test.py  test__main__.py
Conexiune/database/: infrastructure.py
Conexiune/database/tables/: __init__.py  feed_settings.py  prof_adjust.py  tables.py  user.py
Conexiune/db/: infrastructure.py
Conexiune/db/tables/: tables.py
Conexiune/dialogs/: api.py
Conexiune/dialogs/standart_user/: menu_dialog.py
Conexiune/dialogs/standart_user/FeedMenu/: api.py  db_int.py  dialog.py  getter_api.py  getters.py  states.py  w1_api.py  w_api.py
Conexiune/dialogs/standart_user/FeedMenu/feed/: dal_f.py  fill_wrap.py  getters.py  p_takers_f.py
Conexiune/dialogs/standart_user/FeedMenu/feed_settings/: api.py  getters.py  handlers.py  setts_getter_infra.py
Conexiune/dialogs/standart_user/ProfMenu/: dialog.py  getters.py  handlers.py  location_api.py  mw_getter_api.py  states.py
Conexiune/handlers/: start.py
Conexiune/middlewares/: db.py  registration.py  sess_reg_role.py  user_redis.py
trsh/: feed_test.py  sample.py  test__main__.py
trsh/NeoBot/: __main__.py  test_feed_photos.py  test_feed_w-o_photo.py
trsh/TrashBin/: list.py
trsh/TrashBin/bot/: __main__.py  data.py
trsh/TrashBin/bot/handlers/: handlers.py
trsh/TrashBin/bot/kbd/: keyboards.py
trsh/TrashBin/bot/states/: __init__.py
trsh/tishka_analyzis/middlewares/: db.py
