[tool.poetry]
name = "botexpo"
version = "0.1.0"
description = ""
authors = ["bonny <varrr7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0b7"
asyncio = "^3.4.3"
pydantic = "^1.10.11"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"
aiogram_dialog = "2.0.0b20"
sqlalchemy = "^2.0.7"
asyncpg = "^0.27.0"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
